# test1

./: .gitmodules  .travis.yml  0000-template.md  README.md  libraries.json  libraries.txt  pyproject.toml  setup.cfg  setup.py  wf3-af-trig.txt  wf3-at-trig.txt
.github/actions/local_1/: action.yml
.github/workflows/: cron.yml  cron2.yml  env_test.yml  matrix.yml  oarepo_test.yml  pages_1.yml  pyth-build.yml  service_jobs_test.yml  services_test.yml  verbump.yml  wf-matrix.yml  wf1.yml  wf10re.yml  wf10st.yml  wf2.yml  wf3-af.yml  wf3-at.yml  wf4.yml  wf5.yml  wf6.yml  wf7-cibuildwheel.yml  wf8-triggered.yml  wf9-pr.yml  wf_local_1.yml  wf_local_2.yml  wf_test_services.yml
comm2test2/: file1.txt
docs/: 0010-test issue A.md  0011-test issue A.md  0012-[Proposal] test issue A.md  0012-test -issue -b.md  0012-test -issue b.md  0012-test-issue-b.md  0013-[Proposal] test issue A.md  0014-[Proposal] test issue A.md  0015-[Proposal] test issue A.md  0016-test-issue-b.md  0016-test-issue-c.md  0019-test-issue-d.md  0024-test-issue-e.md  0026-test-issue-f.md  index.md
pages/: index-.html  index.md  page1.md  page2.md
python/: PySide_1.py  PySimpleGUI_1.py  wxPython_1.py  wxPython_2.py
scripts/: functions.sh  scr1.sh  scr2.sh
test1/: version.py
test4/: f5_02.txt  f6_02.txt
